Omaha #3942 - Add stats and update memory thresholds
Change-Id: Ie260eb0ba89705da6d0ab2097ab2e3c8c72cb151