@@ -29,7 +29,7 @@
 #    ------------    ----------    -----------    --------------------------
 #    10/17/14        3688          dgilling       Initial Creation.
 #    10/20/14        3688          dgilling       Add logging, fix dependencies.
-#
+#    01/09/15        3942          rjpeter        Set memory parameters.
 ##############################################################################
 
 path_to_script=`readlink -f $0`
@@ -52,9 +52,8 @@ for dependency in $DEPENDENCIES; do
   CLASSPATH="${CLASSPATH}:/awips2/edex/lib/dependencies/${dependency}/*"
 done;
 
-JVM_ARGS="-Xms128m -Xmx256m -XX:+UseConcMarkSweepGC -XX:+CMSIncrementalMode"
+JVM_ARGS="-Xms16m -Xmx32m -XX:+UseConcMarkSweepGC -XX:+CMSIncrementalMode -XX:NewSize=8m -XX:MaxNewSize=8m -XX:SurvivorRatio=6 -XX:MaxPermSize=24m -XX:ReservedCodeCacheSize=8m"
 JVM_PROPS="-Duser.timezone=GMT -Dlogback.configurationFile=${BMH_HOME}/conf/logback-dacsimulator.xml"
 
 
 java ${JVM_ARGS} ${JVM_PROPS} -classpath ${CLASSPATH} ${ENTRY_POINT} "$@"
-
